Removed "visual_studio_integration", hopefully that will fix linux and not break windows

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -101,7 +101,7 @@ jobs:
         with:
           cuda: ${{ matrix.cuda }}
           method: 'network'
-          sub-packages: '["nvcc", "cudart", "cublas", "cublas_dev", "thrust", "visual_studio_integration"]'
+          sub-packages: '["nvcc", "cudart", "cublas", "cublas_dev", "thrust"]'
 
       - name: Build
         id: cmake_build
