--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   release_to_nuget:
-    if: contains(github.event.pull_request.labels.*.name, 'minor-release') | contains(github.event.pull_request.labels.*.name, 'patch-release')
+    if: contains(github.event.pull_request.labels.*.name, 'minor-release') || contains(github.event.pull_request.labels.*.name, 'patch-release')
     runs-on: ubuntu-latest
     
     steps:
