--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
         git fetch --unshallow;
         git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*";
         git fetch origin;
-        $LastTag = git describe --tags;
-        $DroppedTag = ($LastTag).TrimStart('v');
+        LastTag=$(git describe --tags);
+        DroppedTag=$(echo "$LastTag" | sed 's/^v//');
         echo "Last tag is: $DroppedTag";
         
         is_minor=contains(github.event.pull_request.labels.*.name, 'minor-release')
