--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,5 +11,8 @@ env:
 
 jobs:
   release_to_nuget:
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Push LLamaSharp packages to nuget.org
       run: dotnet nuget push ./temp/LLamaSharp*.nupkg --source https://www.nuget.org -k ${{ secrets.LLAMA_SHARP_NUGET_KEY }} --skip-duplicate
