--- a/.github/workflows/release-patch.yml
+++ b/.github/workflows/release-patch.yml
@@ -1,4 +1,4 @@
-name: auto-release
+name: auto-patch-release
 
 on:
   workflow_run:
@@ -11,6 +11,7 @@ env:
 
 jobs:
   patch_release_to_nuget:
+    needs: release-patch-trigger
     runs-on: ubuntu-latest
 
     steps:
