--- a/.github/workflows/release-minor.yml
+++ b/.github/workflows/release-minor.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v3
     - name: Setup NuGet
       uses: nuget/setup-nuget@v1
       with:
