Added `if: always()` to force logs to be written even if earlier steps fail

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
     - name: Test
       run: dotnet test LLamaSharp.sln -c ${{ matrix.config }} -l "console;verbosity=detailed" --diag:logs/log.txt
     - name: Upload artifacts
+      if: always()
       uses: actions/upload-artifact@v3
       with:
         path: logs/
