--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,9 @@ jobs:
       run: dotnet build LLamaSharp.sln -c ${{ matrix.config }} --no-restore
     - name: Test
       run: dotnet test LLamaSharp.sln -c ${{ matrix.config }} -l "console;verbosity=detailed" --diag:logs/log.txt
+    - name: OOM Killer Log
+      if: runner.os == 'Linux'
+      run: dmesg -T | egrep -i 'killed process' > logs/dmesg.log
     - name: Upload artifacts
       if: always()
       uses: actions/upload-artifact@v3
