--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,8 @@ jobs:
     - uses: actions/setup-dotnet@v3
       with:
         dotnet-version: | 
-          6.0.x
           7.0.x
-    - name: Cache Gradle packages
+    - name: Cache Packages
       uses: actions/cache@v3
       with:
         key: "unit_test_models"
