--- a/LLama.KernelMemory/LLamaSharp.KernelMemory.csproj
+++ b/LLama.KernelMemory/LLamaSharp.KernelMemory.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SemanticMemory.Core" Version="0.4.231023.1-preview" />
+    <PackageReference Include="Microsoft.KernelMemory.Core" Version="0.5.231030.1-preview" />
   </ItemGroup>
 
   <ItemGroup>
