--- a/LLama.SemanticKernel/LLamaSharp.SemanticKernel.csproj
+++ b/LLama.SemanticKernel/LLamaSharp.SemanticKernel.csproj
@@ -10,8 +10,8 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
-    <Version>0.6.2-beta1</Version>
-    <Authors>Tim Miller</Authors>
+    <Version>0.7.1</Version>
+    <Authors>Tim Miller, Xbotter</Authors>
     <Company>SciSharp STACK</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Copyright>MIT, SciSharp STACK $([System.DateTime]::UtcNow.ToString(yyyy))</Copyright>
@@ -20,7 +20,7 @@
     <PackageIconUrl>https://avatars3.githubusercontent.com/u/44989469?s=200&amp;v=4</PackageIconUrl>
     <PackageTags>LLama, LLM, GPT, ChatGPT, semantic-kernel, SciSharp</PackageTags>
     <Description>
-      The integration of LLamaSharp ans semantic-kernel.
+      The integration of LLamaSharp and Microsoft semantic-kernel.
     </Description>
     <PackageReleaseNotes>
       Support integration with semantic-kernel
